--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,20 @@
+
+html {
+  font-size: 50%;
+}
+
+@media (min-width: 1000px) {
+  html{
+    font-size: 75%;
+  }
+}
+
+@media (min-width: 2000px) {
+  html{
+    font-size: 85%;
+  }
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
