--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-family: 'Montserrat', sans-serif;
+
 }
 
 code {
